--- a/index.html
+++ b/index.html
@@ -8,19 +8,17 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print" />
 
-    <title>Knittingcircle by gchaix</title>
+    <title>Knitting Circle</title>
   </head>
 
   <body>
 
     <header>
       <div class="container">
-        <h1>Knittingcircle</h1>
+        <h1>Knitting Circle</h1>
         <h2>Open Source Knitting Circle and (Not) Terrorist Society - a semi-regular gathering of open source technology professionals</h2>
 
         <section id="downloads">
-          <a href="https://github.com/gchaix/knittingcircle/zipball/master" class="btn">Download as .zip</a>
-          <a href="https://github.com/gchaix/knittingcircle/tarball/master" class="btn">Download as .tar.gz</a>
           <a href="https://github.com/gchaix/knittingcircle" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
         </section>
       </div>
@@ -28,10 +26,7 @@
 
     <div class="container">
       <section id="main_content">
-        <h1>
-<a name="knittingcircle" class="anchor" href="#knittingcircle"><span class="octicon octicon-link"></span></a>knittingcircle</h1>
-
-<p>Open Source Knitting Circle and (Not) Terrorist Society - a semi-regular gathering of open source technology professionals</p>
+        Next meeting: TBA
       </section>
     </div>
 
