--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <div class="container">
       <section id="main_content">
-        Next meeting: TBA
+        Next meeting: Wednesday, February 12th at PuppetLabs (tentative)
       </section>
     </div>
 
