--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <div class="container">
       <section id="main_content">
-        Next meeting: Wednesday, February 12th at PuppetLabs (tentative)
+        Next meeting: Wednesday, February 12th, 9am-5pm at <a href="https://maps.google.com/maps?f=q&source=embed&hl=en&geocode=&q=926+NW+13th+Ave+%23210+Portland,+OR+97209&aq=&ie=UTF8&hq=&hnear=926+NW+13th+Ave+%23210,+Portland,+Multnomah,+Oregon+97209&t=m&z=14&ll=45.529884,-122.684348">PuppetLabs</a>
       </section>
     </div>
 
