--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       <section id="main_content">
         <h2>Next meeting:</h2>
         <p>Wednesday, February 12th, 9am-5pm at <a href="https://maps.google.com/maps?f=q&source=embed&hl=en&geocode=&q=926+NW+13th+Ave+%23210+Portland,+OR+97209&aq=&ie=UTF8&hq=&hnear=926+NW+13th+Ave+%23210,+Portland,+Multnomah,+Oregon+97209&t=m&z=14&ll=45.529884,-122.684348">PuppetLabs</a></p>
+        <p>Please register <a href="https://docs.google.com/forms/d/1D9NLj4JdD_XpK5aKbDhfXe3lf-wqcxMy3Q73Bvgq-as/viewform">here</a> so we know how many people plan to attend.
       </section>
     </div>
 
