--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="container">
       <section id="main_content">
         <h2>What?</h2>
-        <p>Get together in the big conference room, hack on intersting stuff while interacting with other FOSS geeks in (shudder) meatspace, happy hour beers afterword.</p>
+        <p>Get together in a big conference room, hack on intersting stuff while interacting with other FOSS geeks in (shudder) meatspace, happy hour beers afterword.</p>
         <h2>Who?</h2>
         <p>Various folk from the local FOSS community who work for Canonical, Google, Mozilla, etc.</p>
         <h2>When?</h2>
