fix tyop and add irc

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="container">
       <section id="main_content">
         <h2>What?</h2>
-        <p>Get together in a big conference room, hack on intersting stuff while interacting with other FOSS geeks in (shudder) meatspace, happy hour beers afterword.</p>
+        <p>Get together in a big conference room, hack on intersting stuff while interacting with other FOSS geeks in (shudder) meatspace, happy hour beers afterward.</p>
         <h2>Who?</h2>
         <p>Various folk from the local FOSS community who work for Canonical, Google, Mozilla, etc.</p>
         <h2>When?</h2>
@@ -34,7 +34,8 @@
         <p>'Cuz occupying the same vicinity in meatspace is fun!  And there's beer.</p>
         <h2>Next meeting:</h2>
         <p>Wednesday, February 12th, 9am-5pm at <a href="https://maps.google.com/maps?f=q&source=embed&hl=en&geocode=&q=926+NW+13th+Ave+%23210+Portland,+OR+97209&aq=&ie=UTF8&hq=&hnear=926+NW+13th+Ave+%23210,+Portland,+Multnomah,+Oregon+97209&t=m&z=14&ll=45.529884,-122.684348">PuppetLabs</a></p>
-        <p>Please register <a href="https://docs.google.com/forms/d/1D9NLj4JdD_XpK5aKbDhfXe3lf-wqcxMy3Q73Bvgq-as/viewform">here</a> so we know how many people plan to attend.
+        <p>Please register <a href="https://docs.google.com/forms/d/1D9NLj4JdD_XpK5aKbDhfXe3lf-wqcxMy3Q73Bvgq-as/viewform">here</a> so we know how many people plan to attend.</p>
+        <p>Also join us in #knittingcircle on irc.freenode.net.</p>
       </section>
     </div>
   </body>
