Set location for March

--- a/index.html
+++ b/index.html
@@ -29,12 +29,11 @@
         <h2>When?</h2>
         <p>Whenever we get around to planning one.  Generally quarterly, sometimes more often.</p>
         <h2>Where?</h2>
-        <p>Wherever we can find a room and bandwidth.  OSU, Mozilla, and OPB have all hosted past knitting circle events.</p>
+        <p>Wherever we can find a room and bandwidth.  OSU, Mozilla, OPB, and Puppet Labs have all hosted past knitting circle events.</p>
         <h2>Why?</h2>
         <p>'Cuz occupying the same vicinity in meatspace is fun!  And there's beer.</p>
         <h2>Next meeting:</h2>
-        <p>Wednesday, February 12th, 9am-5pm at <a href="https://maps.google.com/maps?f=q&source=embed&hl=en&geocode=&q=926+NW+13th+Ave+%23210+Portland,+OR+97209&aq=&ie=UTF8&hq=&hnear=926+NW+13th+Ave+%23210,+Portland,+Multnomah,+Oregon+97209&t=m&z=14&ll=45.529884,-122.684348">PuppetLabs</a></p>
-        <p>Please register <a href="https://docs.google.com/forms/d/1D9NLj4JdD_XpK5aKbDhfXe3lf-wqcxMy3Q73Bvgq-as/viewform">here</a> so we know how many people plan to attend.</p>
+        <p><i>TENTATIVE</i> Wednesday, March 26th, 9am-5pm at <a href="https://www.google.com/maps/place/OSU+Foundation/@45.5208894,-122.6792852,17z/data=!3m1!4b1!4m2!3m1!1s0x54950a046fc8fc11:0xf79f7052f530c984">OSU Foundation</a></p>
         <p>Also join us in #knittingcircle on irc.freenode.net.</p>
       </section>
     </div>
