--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         <h2>Next meeting:</h2>
         <p><i>TENTATIVE</i> Wednesday, March 26th, 9am-5pm at <a href="https://www.google.com/maps/place/OSU+Foundation/@45.5208894,-122.6792852,17z/data=!3m1!4b1!4m2!3m1!1s0x54950a046fc8fc11:0xf79f7052f530c984">OSU Foundation</a></p>
         <p>Also join us in #knittingcircle on irc.freenode.net.</p>
+        <p>A big thanks to <a href="http://puppetlabs.com/">Puppet Labs</a> for not only hosting the February event, but feeding us lunch too!</p>
       </section>
     </div>
   </body>
