--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <h2>Why?</h2>
         <p>'Cuz occupying the same vicinity in meatspace is fun!  And there's beer.</p>
         <h2>Next meeting:</h2>
-        <p>Wednesday, March 26th, 9am-5pm at <a href="https://www.google.com/maps/place/OSU+Foundation/@45.5208894,-122.6792852,17z/data=!3m1!4b1!4m2!3m1!1s0x54950a046fc8fc11:0xf79f7052f530c984">OSU Foundation</a></p>
+        <p>Wednesday, April 22nd, 9am-5pm at <a href="https://www.google.com/maps/place/209+SW+Oak+St+%23100/@45.5208346,-122.6733863,19z/data=!4m2!3m1!1s0x54950a065f72eb0b:0xa3d337b1bee68ae9">The Drupal Association</a></p>
         <p>Also join us in #knittingcircle on irc.freenode.net.</p>
         <p>A big thanks to <a href="http://puppetlabs.com/">Puppet Labs</a> for not only hosting the February event, but feeding us lunch too!</p>
       </section>
