--- a/index.html
+++ b/index.html
@@ -33,9 +33,8 @@
         <h2>Why?</h2>
         <p>'Cuz occupying the same vicinity in meatspace is fun!  And there's beer.</p>
         <h2>Next meeting:</h2>
-        <p>Tuesday, April 22nd, 9am-5pm at <a href="http://goo.gl/9atWdF">The Drupal Association</a></p>
+        <p>Tuesday, August 4th, 10am-5pm at <a href="https://goo.gl/WQv2Dz">Brewed Cafe &amp; Pub</a></p>
         <p>Also join us in #knittingcircle on irc.freenode.net.</p>
-        <p>A big thanks to <a href="http://puppetlabs.com/">Puppet Labs</a> for not only hosting the February event, but feeding us lunch too!</p>
       </section>
     </div>
   </body>
