--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <h2>Why?</h2>
         <p>'Cuz occupying the same vicinity in meatspace is fun!  And there's beer.</p>
         <h2>Next meeting:</h2>
-        <p>Tuesday, August 4th, 10am-5pm at <a href="https://goo.gl/WQv2Dz">Brewed Cafe &amp; Pub</a></p>
+        <p>Tuesday, August 4th, 10am-5pm at <a href="https://goo.gl/WQv2Dz">Brewed Cafe &amp; Pub</a>, 603 Main Street, Vancouver WA</p>
         <p>Also join us in #knittingcircle on irc.freenode.net.</p>
       </section>
     </div>
